Enhance API, Datastore Clutch
