# apiserver/openapi_server/auth/controllers.py
@@ -1,0 +1,42 @@
+import datetime
+import os
+import time
+
+import six
+from jose import jwt, JWTError
+from werkzeug.exceptions import Unauthorized
+
+JWT_ISSUER = os.environ.get('JWT_ISSUER')
+JWT_SECRET = os.environ.get('JWT_SECRET')
+JWT_LIFETIME_SECONDS = 600
+JWT_ALGORITHM = 'HS256'
+
+
+def generate_token(user_id):
+    timestamp = _current_timestamp()
+    payload = {
+        "iss": JWT_ISSUER,
+        "iat": int(timestamp),
+        "exp": int(timestamp + JWT_LIFETIME_SECONDS),
+        "sub": str(user_id),
+    }
+
+    return jwt.encode(payload, JWT_SECRET, algorithm=JWT_ALGORITHM)
+
+
+def decode_token(token):
+    try:
+        return jwt.decode(token, JWT_SECRET, algorithms=[JWT_ALGORITHM])
+    except JWTError as e:
+        six.raise_from(Unauthorized, e)
+
+
+def get_secret(user, token_info) -> str:
+    return '''
+        You are user_id {user} and the secret is 'wbevuec'.
+        Decoded token claims: {token_info}.
+        '''.format(user=user, token_info=token_info)
+
+
+def _current_timestamp() -> int:
+    return int(time.time())
